Fix select issues with x-inner-card by styling divs rather than use a card that has overflow set.

--- a/resources/sass/cards.scss
+++ b/resources/sass/cards.scss
@@ -1,4 +1,12 @@
-// Add to your cards.scss
+.darker-card {
+    background-color: #DAE3F3 !important;
+}
+
+.white-box {
+    background-color: #ffffff;
+    border-radius: 8px;
+}
+
 .projects-list {
     .active-project-item {
         padding: 0.75rem 0;
